apply plugin: 'java'

group = 'org.freeshell.rfcornel'
version = '1.0-SNAPSHOT'

description = """xmldiff"""

sourceCompatibility = 11
targetCompatibility = 11

repositories {     
     maven { url "https://repo.maven.apache.org/maven2" }
}
dependencies {
    implementation group: 'com.google.guava', name: 'guava', version:'22.0'
    implementation group: 'org.mockito', name: 'mockito-core', version:'2.22.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version:'2.8.9'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version:'2.8.9'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.8.9'
    testCompile group: 'junit', name: 'junit', version:'4.12'
    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version:'1.3'
}


